# satin

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  KNOWN_ISSUES.md  Makefile  README.md  TODO.md  codecov.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docker/: Dockerfile.backend  Dockerfile.frontend  mongo-init.js
docs/: Makefile
docs/development/: api.md  architecture.md  requirements.md  system_design.md
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/_static/: .gitkeep
docs/source/api/: backend.rst  frontend.rst  graphql.rst  index.rst
docs/source/api_reference/: graphql_api.rst  index.rst  javascript_sdk.rst  rest_endpoints.rst
docs/source/developer/: architecture.rst  index.rst
docs/source/development/: architecture.rst  contributing.rst  setup.rst  testing.rst
docs/source/user_guide/: annotations.rst  export.rst  index.rst  installation.rst  keyboard_shortcuts.rst  projects.rst  tasks.rst
frontend/: .gitignore  .prettierignore  codegen.ts  codegen.yml  debug-test.js  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts  vitest-setup-client.ts  vitest-wrapper.js  vitest.config.ts
frontend/e2e/: annotations.test.ts  demo.test.ts  global-setup.ts  global-teardown.ts  graphql.test.ts  images.test.ts  mocks.ts  projects.test.ts  tasks.test.ts  test.ts
frontend/e2e/utils/: graphql-client.ts  index.ts  test-data.ts  wait-helpers.ts
frontend/scripts/: run-client-tests.js
frontend/src/: app.d.ts  global.d.ts  hooks.client.ts  hooks.server.ts  vitest-setup.ts
frontend/src/__mocks__/@urql/: svelte.ts
frontend/src/lib/: index.test.ts  index.ts
frontend/src/lib/components/: AddImageDialog.svelte  AnnotationPanel.svelte  AnnotationPanel.svelte.test.ts  AnnotationToolbar.svelte  AnnotationToolbar.svelte.test.ts  AnnotationWorkspace.svelte  AnnotationWorkspace.svelte.test.ts  BaseLayout.svelte  BaseLayout.svelte.spec.ts  ErrorBoundary.svelte  ErrorBoundary.svelte.spec.ts  Header.svelte  ImageCanvas.svelte  ImageCanvas.svelte.test.ts  ImageCard.svelte  ImageFilter.svelte  ImageGrid.svelte  LoadingButton.svelte  LoadingButton.svelte.spec.ts  LoadingSkeleton.svelte  LoadingSkeleton.svelte.spec.ts  LoadingSpinner.svelte  LoadingSpinner.svelte.spec.ts  Navigation.svelte  Navigation.svelte.test.ts  Pagination.svelte  Sidebar.svelte  Sidebar.svelte.spec.ts  StatusBadge.svelte  StatusBadge.svelte.spec.ts  ToastContainer.svelte  ToastContainer.svelte.spec.ts
frontend/src/lib/config/: config.test.ts  env.ts  index.ts
frontend/src/lib/core/: index.ts
frontend/src/lib/graphql/: client.test.ts  client.ts  generated.ts  index.ts  queries.test.ts  queries.ts  types.test.ts  types.ts
frontend/src/lib/services/: graphqlService.ts  index.ts  projectService.ts
frontend/src/lib/stores/: annotationStore.ts  toast.spec.ts  toast.ts
frontend/src/lib/test-utils/: index.ts
frontend/src/lib/types/: api.ts  domain.ts  index.ts  ui.ts
frontend/src/lib/utils/: format.test.ts  format.ts  image-generator.ts  keyboard.svelte.spec.ts  keyboard.ts  validation.test.ts  validation.ts
frontend/src/mocks/: browser.ts  handlers.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Counter.svelte  layout.svelte.spec.ts  page.svelte.spec.ts  page.svelte.test.ts
frontend/src/routes/annotate/: +page.svelte  page.svelte.spec.ts
frontend/src/routes/annotations/: +error.svelte  +layout.ts  +page.server.ts  +page.svelte
frontend/src/routes/export/: +page.svelte
frontend/src/routes/exports/: +page.svelte
frontend/src/routes/images/: +layout.ts  +page.svelte
frontend/src/routes/projects/: +layout.ts  +page.svelte  projects-simple.test.ts
frontend/tests/: README.md
frontend/tests/e2e/: api-testing.spec.ts  basic.spec.ts  cross-browser.spec.ts  image-annotation.spec.ts  performance.spec.ts  project-management.spec.ts
scripts/: create_test_images.py  init-mongodb.js  run-e2e.sh  test-backend-setup.sh
src/satin/: __init__.py  __main__.py  app.py  config.py  constants.py  database.py  db.py  dependencies.py  exceptions.py  main.py  utils.py
src/satin/config/: settings.py
src/satin/graphql/: schema.py  types.py
src/satin/middleware/: __init__.py  graphql_security.py  logging.py  rate_limit.py  security.py
src/satin/models/: __init__.py  annotation.py  base.py  filters.py  image.py  ml_job.py  project.py  tag.py  task.py
src/satin/repositories/: __init__.py  annotation.py  base.py  factory.py  image.py  ml_job.py  project.py  tag.py  task.py
src/satin/routers/: upload.py
src/satin/schema/: __init__.py  annotation.py  filters.py  image.py  mutation.py  project.py  query.py  task.py  types.py  utils.py
src/satin/services/: file_upload.py
src/satin/validators/: __init__.py  input_sanitizer.py  sanitization_decorator.py
tests/: conftest.py  strategies.py  test_annotation.py  test_config.py  test_database.py  test_graphql.py  test_graphql_mutations.py  test_graphql_queries.py  test_graphql_schema.py  test_image.py  test_project.py  test_repositories.py  test_tag_repository.py  test_task.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_workflow_scenarios.py
tests/integration/graphql/: __init__.py  test_annotation_mutations.py  test_annotation_queries.py  test_introspection.py  test_ml_job_mutations.py  test_ml_job_queries.py  test_mutations.py  test_queries.py  test_tag_mutations.py  test_tag_queries.py
tests/repositories/: conftest.py  test_annotations.py  test_images.py  test_ml_jobs.py  test_tags.py
tests/unit/config/: test_settings.py
tests/unit/database/: test_connection.py
tests/unit/repositories/: test_annotation_repo.py  test_annotation_repo_properties.py  test_image_repo.py  test_ml_job_repo.py  test_tag_repo.py  test_tag_repo_properties.py
(+173 files in other folders)
