[project]
name = "satin"
version = "0.1.0"
description = "Lightweight web-based image annotation tool"
readme = "README.md"
authors = [
    { name = "Ilia Bushmakin", email = "im.bushmakin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.8.0",
    "pymongo>=4.10.0",
    "strawberry-graphql[fastapi]>=0.252.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "isort>=5.13.0",
    "ssort>=0.13.0",
    "pytest>=8.3.0",
    "pytest-xdist>=3.6.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
satin = "satin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
  "ALL", # include all the rules, including new ones
]
lint.ignore = [
  "ANN",     # flake8-annotations
  "D100",    # ignore missing docs
  "D101",
  "D203",    # ignore no blank lines before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "COM812",  # ignore missing blank line after last section
  "FBT001",  # ignore boolean arguments
  "FBT002",
  "TD",      # ignore TODOs
  "FIX002",  # ignore TODOs
  "PLR0913", # ignore too many arguments
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "D104", # ignore missing docs
]
"tests/**/*.py" = [
  "D100",    # ignore missing docs
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "ANN",     # flake8-annotations
  "S101",    # ignore asserts
  "S311",    # ignore standard PRNG usage
  "PLR2004", # ignore magic values
  "PD901",   # allow df as variable name
  "SLF001",  # private method accessed outside of class
  "PGH003",  # allow unspecified type ignores
]
"docs/source/conf.py" = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.vulture]
exclude = ["tests/", "dir/"]
ignore_decorators = []
make_whitelist = true
min_confidence = 80
paths = ["src"]
sort_by_size = true

[dependency-groups]
dev = [
    "httpx>=0.24.0",
    "hypothesis>=6.138.2",
    "isort>=6.0.1",
    "mongomock-motor>=0.0.36",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.10",
    "ssort>=0.15.0",
    "vulture>=2.14",
]
